# tutorial

./: .gitignore  pyproject.toml
config/: sweep_bayesian.yaml  sweep_grid.yaml  sweep_random.yaml
scripts/: prototype.ipynb  run_sweep.slurm
src/tutorial/: dataset.py  evaluator.py  main.py  model.py  monitor.py  trainer.py  utils.py
tests/: test_dataset.py  test_model.py  test_monitor.py  test_trainer.py  test_utils.py
