[project]
name = "tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "dotmap (>=1.3.30,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "petname (>=2.6,<3.0)"
]

[tool.poetry]
packages = [{include = "tutorial", from = "src"}]

[tool.poetry.scripts]
tutorial = "src.tutorial.main:main"


[tool.poetry.dependencies]
torch = {source = "torch-cuda"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"